Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18171

ep-engine: circular reference between ActiveStream & ActiveStreamCheckpointProcessorTask causes memory leak.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.1.4, 4.1.1, 4.5.0
    • .master, 3.1.4, 4.1.1
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Yes

    Description

      ActiveStream and ActiveStreamCheckpointProcessorTask both hold a ref-counted pointer to each other.

      As a result of this there is a memory leak when a DCPProducer is deleted, as ActiveStream and ActiveStreamCheckpointProcessorTask mutually hold the ref-count of the other up.

      This code was triggered by one of the fixes for MB-16632 - specifically http://review.couchbase.org/#/c/57148/.

      For each created (and deleted) DCPProducer, we appear to leak ~4KB of memory (measured via stream_test). I haven't confirmed this in full-stack tests.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhinav Abhi Dangeti
              drigby Dave Rigby
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty