src/connmap.cc
@@ -1055,6 +1055,7 @@ void DcpConnMap::closeAllStreams_UNLOCKED() {
         DcpProducer* producer = dynamic_cast<DcpProducer*> (itr->second.get());
         if (producer) {
             producer->closeAllStreams();
+            producer->clearCheckpointProcessorTaskQueues();
         } else {
             static_cast<DcpConsumer*>(itr->second.get())->closeAllStreams();
         }
@@ -1088,6 +1089,7 @@ void DcpConnMap::disconnect_UNLOCKED(const void *cookie) {
         DcpProducer* producer = dynamic_cast<DcpProducer*> (conn.get());
         if (producer) {
             producer->closeAllStreams();
+            producer->clearCheckpointProcessorTaskQueues();
         } else {
             static_cast<DcpConsumer*>(conn.get())->closeAllStreams();
         }
