src/dcp-stream.h
@@ -168,7 +168,7 @@ public:
                  const std::string &name, uint32_t flags, uint32_t opaque,
                  uint16_t vb, uint64_t st_seqno, uint64_t en_seqno,
                  uint64_t vb_uuid, uint64_t snap_start_seqno,
-                 uint64_t snap_end_seqno, ExTask task);
+                 uint64_t snap_end_seqno);
 
     ~ActiveStream() {
         LockHolder lh(streamMutex);
@@ -277,8 +277,6 @@ private:
     //! Last snapshot end seqno sent to the DCP client
     uint64_t lastSentSnapEndSeqno;
 
-    ExTask checkpointCreatorTask;
-
     /* Flag used by checkpointCreatorTask that is set before all items are
        extracted for given checkpoint cursor, and is unset after all retrieved
        items are added to the readyQ */
@@ -303,6 +301,7 @@ public:
     bool run();
     void schedule(stream_t stream);
     void wakeup();
+    void clearQueues();
 
 private:
 
